<resources>
    <string name="app_name">3DViewer</string>
    <string name="descargar03D">Descargar objeto3D</string>
    <string name="mis03D">Mis objetos3D</string>
    <string name="subir03D">Subir objetos3D</string>
    <string name="animados">Animados</string>
    <string name="no_animados">No animados</string>
    <string name="error_conexion">No ha sido posible conectarse al servidor</string>
    <string name="detalle_modelo">Detalle</string>
    <string name="descargar_button">Descargar</string>
    <string name="borrar_button">Borrar</string>
    <string name="nombre_detalle">Nombre:</string>
    <string name="extension_detalle">Extensión:</string>
    <string name="tamanno_detalle">Tamaño:</string>
    <string name="visor3d_button">Ver en visor3D</string>
    <string name="visorVR_button">Ver en realidad virtual</string>
    <string name="subir_modelo">Subir Modelo 3D</string>
    <string name="editar_modelo">Editar Modelo 3D</string>
    <string name="subidor_pormi">Subidos</string>
    <string name="action_save">guardar</string>
    <string name="action_delete">Borrar</string>
    <string name="unsaved_changes_dialog_msg">¿Descartar los cambios y acabar de editar?</string>
    <string name="discard">Descartar</string>
    <string name="keep_editing">Seguir editando</string>
    <string name="delete_dialog_msg">¿Desea Borrar este modelo?</string>
    <string name="delete">Borrar</string>
    <string name="cancel">Cancelar</string>
    <string name="editor_delete_pet_failed">Error, modelo no borrado</string>
    <string name="editor_delete_pet_successful">Modelo borrado</string>
    <string name="subir_archivo">seleccionar</string>
    <string name="todo_correcto">Todo correcto</string>
    <string name="error_insercion">Error al insertar</string>
    <string name="nada_insertado">nada insertado</string>
    <string name="insercion_correcta">insercion correcta</string>

</resources>
