<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.rubenbp.android.a3dviewer.SubirModeloActivity">

    <ImageView
        android:id="@+id/subir_imagen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/darker_gray"
        android:scaleType="fitCenter"
        android:src="@drawable/objeto3d" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/subir_nombre"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/nombre_detalle"

            />

        <EditText
            android:id="@+id/subir_extension"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
           android:hint="@string/extension_detalle" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/subir_tamanno"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tamanno_detalle"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeTextType="uniform" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_animado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="Animado" />

            <RadioButton
                android:id="@+id/radio_noanimado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="No animado" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/upload_button_visor3D"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:onClick="onClickUploadFile"
        android:text="@string/visor3d_button"
        android:textSize="15sp"
        android:background="@color/grey_blue_button"/>

    <Button
        android:id="@+id/upload_button_archivo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/green_button"
        android:onClick="onClickUploadFile"
        android:text="@string/subir_archivo"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>
