<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:elevation="6dp"

        >

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:src="@drawable/descargar_objeto_3d" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:autoText="false"
            android:text="@string/descargar03D"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:elevation="6dp"
            >

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/subir_objetos_3d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/subir03D"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"

            android:background="@color/white"
            android:elevation="6dp"
            >

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/mis_objetos_3d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/mis03D"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>





</LinearLayout>
